--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -6,12 +6,12 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link id="theme-css" href="/themes/arya-orange/theme.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="/src/styles.scss" /> -->
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link id="theme-css" href="./themes/arya-orange/theme.css" rel="stylesheet" />
+    <!-- <link rel="stylesheet" href="./src/styles.scss" /> -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
